[gd_scene load_steps=2 format=3 uid="uid://dfnpr5e524a0n"]

[ext_resource type="Script" path="res://GameOver.gd" id="1_6lynq"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_6lynq")

[node name="GameOverLabel" type="Label" parent="."]
offset_left = 440.0
offset_top = 240.0
offset_right = 715.0
offset_bottom = 359.0
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
offset_left = 448.0
offset_top = 343.0
offset_right = 495.0
offset_bottom = 369.0
text = "Time: "

[node name="Time" type="Label" parent="TimeLabel"]
layout_mode = 0
offset_left = 51.0
offset_top = -1.0
offset_right = 91.0
offset_bottom = 25.0

[node name="MonsterLabel" type="Label" parent="."]
offset_left = 449.0
offset_top = 368.0
offset_right = 588.0
offset_bottom = 394.0
text = "Monsters Killed:"

[node name="MonstersKilled" type="Label" parent="MonsterLabel"]
layout_mode = 0
offset_left = 130.0
offset_top = 1.0
offset_right = 170.0
offset_bottom = 24.0

[node name="DandelionLabel" type="Label" parent="."]
offset_left = 450.0
offset_top = 392.0
offset_right = 554.0
offset_bottom = 418.0
text = "Dandelions Weeded: "

[node name="DandelionsKilled" type="Label" parent="DandelionLabel"]
layout_mode = 0
offset_left = 164.0
offset_right = 204.0
offset_bottom = 23.0
